--- a/templates/index.html
+++ b/templates/index.html
@@ -20,13 +20,14 @@
 
   <div class="centered">
     <!-- <img src="{{ url_for("static", filename="angel.png") }}" alt="angel" sizes="5,5"> -->
-
+    
     <p class="smallfont">The good development since start</p>
     <span id=goodId> </span> <span>%</span>
     <br>
     <p class="smallfont">The good current portfolio value</p>
     <span id=goodValue></span><span>$</span>
     <p class="verysmallfont" id="goodnames"></p>
+    <p class="smallfont" id="marketIsOpen"></p>
   </div>
 </div>
 
